--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <a class="navChild" href="#" id="logo">AMAZONE.IN</a>
-        <a class="navChild" href="#">ACCOUNT</a>
-        <a class="navChild" href="#">MyCart</a>
-        <a class="navChild" href="#">Contact Us</a>
-        <input  type="text" name="search" id="search">
-        <button>SEARCH</button>
-    </nav>
+    <header>
+        <nav>
+            <a href="#" style="color: orange;">amazone.in</a>
+            <a href="#">Account</a>
+            <a href="#">My cart</a>
+            <a href="#">Contact us</a>
+            <input type="text"><button>SEARCH</button>
+        </nav>
+    </header>
+    <main>
+        <div class="box" id="box1"></div>
+        <div class="box" id="box2"></div>
+        <div class="box" id="box3"></div>
+    </main>
+    <footer></footer>
 </body>
 </html>
