modified the navbar using flexbox in css

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
     <header>
         <nav>
-            <a href="#" style="color: orange;">amazone.in</a>
-            <a href="#">Account</a>
-            <a href="#">My cart</a>
-            <a href="#">Contact us</a>
-            <input type="text"><button>SEARCH</button>
+            <ul id="navbar">
+                <li><a href="#" style="color: orange;">amazone.in</a></li>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">My cart</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li>
+                    <div>
+                        <input type="text"><button>SEARCH</button>
+                    </div>
+                </li>
+            </ul>
         </nav>
     </header>
     <main>
