--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
         <div class="box" id="box3"></div>
     </main>
     <footer></footer>
+    <form action="" method="post">
+        <fieldset>
+            <label for=""></label>
+        </fieldset>
+    </form>
 </body>
 </html>
